# molbook-openclaw

./: .dockerignore  .env.example  .gitignore  .merge-resolution-patterns.md  .npmrc  .oxlintrc.json  .pre-commit-config.yaml  .secrets.baseline  .swiftformat  .swiftlint.yml  AGENT.md  AGENTS.md  AIQREADME.md  AUTOMATIONS-BRAINSTORM.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  COLLABORATION_COMPLETE.md  CONTINUITY.md  CONTRIBUTING.md  CONTRIBUTING_I18N.md  CONTROL-UI-ENHANCEMENTS.md  Dockerfile  Dockerfile.homebrew  Dockerfile.prod  Dockerfile.sandbox  Dockerfile.sandbox-browser  EXTENSIONS.md  GITHUB-QUICKSTART.md  HEARTBEAT.md  HIGH-AVAILABILITY.md  IDENTITY.md  IMPLEMENTATION-STATUS.md  KOKORO_PR_PROPOSAL.md  MCP-INTEGRATION.md  MEMORY.md  Makefile  PI_EXTENSION_TESTS.md  PI_GUARD_DESIGN.md  PROJECTS_UX_WIPE_ROLLBACK.md  (+74 more)
.beads/: .gitignore  README.md  config.yaml
.claude/: settings.json
.clawdbot/: clawdbot.json
.clawdhub/: lock.json
.clawhub/: lock.json
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
.github/: GITHUB-DEPLOY.md  PULL_REQUEST_TEMPLATE_7687.md  codespaces.yml  dependabot.yml  labeler.yml
.sig/: config.json
.translate-cn/: 001_initial.json  002_cron_debug_logs.json  002_tui.json  003_config_forms.json  004_views_misc.json  005_app_channels.json  006_views_channels_complete.json  007_controllers_and_app.json  008_cli_core.json  010_cli_setup.json  (+51 more)
komatachi/crates/compaction/: Cargo.toml  index.d.ts  index.js  package.json
komatachi/crates/compaction/src/: lib.rs
src/services/utils/: CMakeLists.txt  server.cpp
(+5165 files in other folders)
